--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,12 @@
   	<description></description>
   	<servlet-class>controller.AgreementController</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>PersonEvaluationController</servlet-name>
+  	<display-name>PersonEvaluationController</display-name>
+  	<description></description>
+  	<servlet-class>controller.PersonEvaluationController</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>OrderController</servlet-name>
   	<url-pattern>/OrderController</url-pattern>
@@ -33,5 +39,9 @@
   <servlet-mapping>
   	<servlet-name>AgreementController</servlet-name>
   	<url-pattern>/AgreementController</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>PersonEvaluationController</servlet-name>
+  	<url-pattern>/PersonEvaluationController</url-pattern>
   </servlet-mapping>
 </web-app>
