--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.6</version>
 		</dependency>
-
-
+		
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>7.3.0</version>
+		</dependency>
 
 
 	</dependencies>
