--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,11 @@
 			<version>7.3.0</version>
 		</dependency>
 
-
+		<dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>mail</artifactId>
+		    <version>1.5.0-b01</version>
+		</dependency>
 	</dependencies>
 
 	<build>
